[package]
name = "buildingstore-be"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
dashmap = "5.5.3"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
getset = "0.1.2"
dotenvy = "0.15.7"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres", "sqlx_sqlite"]}
sqlx = { version = "0.7", features = ["migrate", "macros", "any"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.17.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
mockall = "0.11"

[build-dependencies]
tonic-build = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockall = "0.11"
async-trait = "0.1"